# trading_agent

./: .env  .env.example  main.py  pyproject.toml
data/: mock_data.csv
src/: market_data.py  models.py  modelscope_llm.py  prompts.py  workflow.py
